adaugare teste junit lab02